--- a/config
+++ b/config
@@ -5,6 +5,6 @@ prog_subdir=progs
 libdir=/usr/lib
 tmpdir=/var/tmp
 master=master
-slaves=(master slave01)
-regionservers=(master slave01)
-quorums=(master slave01)
+slaves=(master)
+regionservers=(master)
+quorums=(master)
