--- a/config
+++ b/config
@@ -1,6 +1,6 @@
 uname=hadoop
 passwd=hadoop
-prog_arr=(jdk hadoop hbase phoenix)
+prog_arr=(jdk hadoop hbase phoenix pig)
 prog_subdir=progs
 libdir=/usr/lib
 tmpdir=/var/tmp
